<resources>
    <string name="app_name">Gotiket</string>
    <string name="pesawat">Pesawat</string>
    <string name="kereta">Kereta</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subjudul">Tiket Tersedia</string>
    <string name="jenis_pesawat">Super Air Je</string>
    <string name="tgl_berangkat">Sab, 10 Dessember 2022</string>
    <string name="waltu_berangkat">14.00 WIB</string>
    <string name="harga_tiket">280.000,00-/Orang</string>
    <string name="logo">link</string>
    <string name="regis">Belum punya akun?</string>

    <string name="age">age</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="simpan">simpan</string>
    <string name="icon">Icon</string>


</resources>