<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="false"
    >

    <RelativeLayout
        android:background="@color/bground"
        android:elevation="6dp"
        android:layout_marginVertical="2dp"
        android:layout_marginBottom="0dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/rlkrt_klik"
        android:layout_width="match_parent"
        android:paddingBottom="6dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.8"
            android:maxHeight="83dp"
            android:src="@drawable/train" />

            <TextView
                android:id="@+id/jenis_kereta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/logo"
                android:text="@string/jenis_pesawat"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tgl_kereta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/jenis_kereta"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/logo"
                android:text="@string/tgl_berangkat"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/waktukereta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginStart="-75dp"
                android:layout_toEndOf="@+id/logo"
                android:text="@string/waltu_berangkat"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/hargakereta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tgl_kereta"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/logo"
                android:text="@string/harga_tiket"
                android:textColor="#000000"
                android:textSize="18sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>